--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,8 +29,17 @@
 }
 .container {
   background: url(../public/images/bg-img.jpg);
+  opacity: 0.9;
   background-position: center;
-  background-size: 1800px;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
+}
+.intro {
+  color: white;
+  margin-left: 14rem;
+  margin-top: 20rem;
+  font-size: 64px;
+  text-transform: uppercase;
+  letter-spacing: 15px;
 }
