--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,6 +51,9 @@
   margin-left: 14rem;
   position: relative;
   margin-bottom: 30px;
+  text-align: center;
+  display: flex;
+  position: sticky;
 }
 
 .me {
